--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                             <img src="images/projects/CinemaFind.png" alt="Cinemafind" class="project-image-cinema" >
                         </div>
                         <div class="project-overlay">
-                            <a href="videos/Demo Cinemafind.mp4" class="project-link" target="_blank" rel="noopener noreferrer" data-lang-id="Lihat Demo" data-lang-en="View Demo">Lihat Detail</a>
+                            <a href="videos/Demo_Cinemafind.mp4" class="project-link" target="_blank" rel="noopener noreferrer" data-lang-id="Lihat Demo" data-lang-en="View Demo">Lihat Detail</a>
                         </div>
                     </div>
                     <div class="project-content">
@@ -365,4 +365,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
